hw05/yDFA.output
Grammar

    0 $accept: line $end

    1 line: A0 '\n'
    2     | line A0 '\n'
    3     | error '\n'

    4 A0: aletter A1
    5   | bletter A1
    6   | /* empty */

    7 A1: aletter A2
    8   | bletter A2

    9 A2: aletter A3
   10   | bletter A3

   11 A3: aletter A5
   12   | bletter A4
   13   | /* empty */

   14 A4: aletter A0
   15   | bletter A5
   16   | /* empty */

   17 A5: /* empty */

   18 aletter: 'a'

   19 bletter: 'b'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
'a' (97) 18
'b' (98) 19
error (256) 3


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
line (7)
    on left: 1 2 3, on right: 0 2
A0 (8)
    on left: 4 5 6, on right: 1 2 14
A1 (9)
    on left: 7 8, on right: 4 5
A2 (10)
    on left: 9 10, on right: 7 8
A3 (11)
    on left: 11 12 13, on right: 9 10
A4 (12)
    on left: 14 15 16, on right: 12
A5 (13)
    on left: 17, on right: 11 15
aletter (14)
    on left: 18, on right: 4 7 9 11 14
bletter (15)
    on left: 19, on right: 5 8 10 12 15


state 0

    0 $accept: . line $end

    error  shift, and go to state 1
    'a'    shift, and go to state 2
    'b'    shift, and go to state 3

    '\n'  reduce using rule 6 (A0)

    line     go to state 4
    A0       go to state 5
    aletter  go to state 6
    bletter  go to state 7


state 1

    3 line: error . '\n'

    '\n'  shift, and go to state 8


state 2

   18 aletter: 'a' .

    $default  reduce using rule 18 (aletter)


state 3

   19 bletter: 'b' .

    $default  reduce using rule 19 (bletter)


state 4

    0 $accept: line . $end
    2 line: line . A0 '\n'

    $end  shift, and go to state 9
    'a'   shift, and go to state 2
    'b'   shift, and go to state 3

    $default  reduce using rule 6 (A0)

    A0       go to state 10
    aletter  go to state 6
    bletter  go to state 7


state 5

    1 line: A0 . '\n'

    '\n'  shift, and go to state 11


state 6

    4 A0: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 12
    aletter  go to state 13
    bletter  go to state 14


state 7

    5 A0: bletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 15
    aletter  go to state 13
    bletter  go to state 14


state 8

    3 line: error '\n' .

    $default  reduce using rule 3 (line)


state 9

    0 $accept: line $end .

    $default  accept


state 10

    2 line: line A0 . '\n'

    '\n'  shift, and go to state 16


state 11

    1 line: A0 '\n' .

    $default  reduce using rule 1 (line)


state 12

    4 A0: aletter A1 .

    $default  reduce using rule 4 (A0)


state 13

    7 A1: aletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 17
    aletter  go to state 18
    bletter  go to state 19


state 14

    8 A1: bletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 20
    aletter  go to state 18
    bletter  go to state 19


state 15

    5 A0: bletter A1 .

    $default  reduce using rule 5 (A0)


state 16

    2 line: line A0 '\n' .

    $default  reduce using rule 2 (line)


state 17

    7 A1: aletter A2 .

    $default  reduce using rule 7 (A1)


state 18

    9 A2: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 13 (A3)

    A3       go to state 21
    aletter  go to state 22
    bletter  go to state 23


state 19

   10 A2: bletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 13 (A3)

    A3       go to state 24
    aletter  go to state 22
    bletter  go to state 23


state 20

    8 A1: bletter A2 .

    $default  reduce using rule 8 (A1)


state 21

    9 A2: aletter A3 .

    $default  reduce using rule 9 (A2)


state 22

   11 A3: aletter . A5

    $default  reduce using rule 17 (A5)

    A5  go to state 25


state 23

   12 A3: bletter . A4

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 16 (A4)

    A4       go to state 26
    aletter  go to state 27
    bletter  go to state 28


state 24

   10 A2: bletter A3 .

    $default  reduce using rule 10 (A2)


state 25

   11 A3: aletter A5 .

    $default  reduce using rule 11 (A3)


state 26

   12 A3: bletter A4 .

    $default  reduce using rule 12 (A3)


state 27

   14 A4: aletter . A0

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 6 (A0)

    A0       go to state 29
    aletter  go to state 6
    bletter  go to state 7


state 28

   15 A4: bletter . A5

    $default  reduce using rule 17 (A5)

    A5  go to state 30


state 29

   14 A4: aletter A0 .

    $default  reduce using rule 14 (A4)


state 30

   15 A4: bletter A5 .

    $default  reduce using rule 15 (A4)
